--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <div class="col-3">Logo</div>
+                <div class="col-3">
+                    <div class="logo">
+                        <a href="">
+                            <img src="images/icon (3).png" alt="">
+                        </a>
+                    </div>
+                </div>
                 <div class="col-6">Menu</div>
                 <div class="col-3">Search</div>
             </div>
