--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-6">Menu</div>
+                <div class="col-6">
+                    <nav>
+                        <ul class="menu">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Payments</a></li>
+                            <li><a href="">Shipings</a></li>
+                        </ul>
+                    </nav>
+                </div>
                 <div class="col-3">Search</div>
             </div>
         </div>
