--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson9</title>
+    <title>Lesson9 test</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,9 +36,17 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-3">Search</div>
+                <div class="col-3">
+                    <div class="search">
+                        <input type="text" placeholder="Search" class="search1">
+                        
+                        <!--  <input type="text" placeholder="Search" class="search2">
+                        <img src="images/icon (1).png"> -->
+                    </div>
+                </div>
             </div>
         </div>
+
     </header>
     <main class="main">Main</main>
     <footer class="footer">Footer</footer>
