--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="col-6">
                     <nav>
                         <ul class="menu">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
+                            <li><a href="">Home1</a></li>
+                            <li><a href="">Products2</a></li>
                             <li><a href="">Payments</a></li>
                             <li><a href="">Shipings</a></li>
                         </ul>
@@ -39,7 +39,7 @@
                 <div class="col-3">
                     <div class="search">
                         <input type="text" placeholder="Search" class="search1">
-                        
+
                         <!--  <input type="text" placeholder="Search" class="search2">
                         <img src="images/icon (1).png"> -->
                     </div>
