--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="col-6">
                     <nav>
                         <ul class="menu">
-                            <li><a href="">Home1</a></li>
+                            <li><a href="">Home</a></li>
                             <li><a href="">Products2</a></li>
                             <li><a href="">Payments</a></li>
                             <li><a href="">Shipings</a></li>
